Fixed squashed profile picture in user-chip

--- a/website/static/css/header.css
+++ b/website/static/css/header.css
@@ -124,3 +124,7 @@
     color:white !important;
     background-color:var(--hs-gray)
 }
+.user-chip > .chip-img{
+    object-fit:cover;
+    object-position:center;
+}
